--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-
+    <img src="https://image.kilimall.com/kenya/shop/store/goods/5971/2021/10/1633439147595a77edcd05e3d45419dec6691e99bc92c_360.jpg.webp#?x-image-process=image/format,webp" alt="Image">
 </body>
 </html>
