Working on the FrontEnd

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,104 @@
         </label>
     </form>
 
+    <div class="center"><a href="/jumia">Shop Online Jumia Stores</a> <a style="border-left: 1px solid #000000;" href="/kilimall">Shop Online Kilimall Store</a></div>
 </div>
+<div class="slider__slides"><div class="slide" id="marriott">
+        <a href="https://price.com/coupons/marriott" aria-label="Marriott Coupons and Cash Back" class="slide__link"></a>
+        <div class="slide__image">
+            <img width="87" height="87" data-src="https://d229ghlvos009z.cloudfront.net/favicon/marriott-bonvoy-icon-030524.png" alt="marriott" class=" lazyloaded" src="https://d229ghlvos009z.cloudfront.net/favicon/marriott-bonvoy-icon-030524.png">
+        </div>
+        <div class="slide__text">
+            <h3>Marriott</h3>
+            <h4>2 Coupons</h4>
+            <h4>5.5% Online</h4>
 
+
+        </div>
+     </div><div class="slide" id="booking">
+        <a href="https://price.com/coupons/booking" aria-label="Booking.com Coupons and Cash Back" class="slide__link"></a>
+        <div class="slide__image">
+            <img width="87" height="87" data-src="https://d229ghlvos009z.cloudfront.net/favicon/booking-icon-030524.png" alt="booking" class=" lazyloaded" src="https://d229ghlvos009z.cloudfront.net/favicon/booking-icon-030524.png">
+        </div>
+        <div class="slide__text">
+            <h3>Booking.com</h3>
+            <h4>13 Coupons</h4>
+            <h4>11% Online</h4>
+
+
+        </div>
+     </div><div class="slide" id="nike">
+        <a href="https://price.com/coupons/nike" aria-label="Nike Coupons and Cash Back" class="slide__link"></a>
+        <div class="slide__image">
+            <img width="87" height="87" data-src="https://d229ghlvos009z.cloudfront.net/favicon/nike-icon-030524.jpg" alt="nike" class=" lazyloaded" src="https://d229ghlvos009z.cloudfront.net/favicon/nike-icon-030524.jpg">
+        </div>
+        <div class="slide__text">
+            <h3>Nike</h3>
+            <h4>13 Coupons</h4>
+            <h4>13.5% Online</h4>
+
+
+        </div>
+     </div><div class="slide" id="walmart">
+        <a href="https://price.com/coupons/walmart" aria-label="Walmart Coupons and Cash Back" class="slide__link"></a>
+        <div class="slide__image">
+            <img width="87" height="87" data-src="https://d229ghlvos009z.cloudfront.net/favicon/Walmart-Icon-030524.png" alt="walmart" class=" lazyloaded" src="https://d229ghlvos009z.cloudfront.net/favicon/Walmart-Icon-030524.png">
+        </div>
+        <div class="slide__text">
+            <h3>Walmart</h3>
+            <h4>9 Coupons</h4>
+            <h4>3% Online</h4>
+
+
+        </div>
+     </div><div class="slide" id="target">
+        <a href="https://price.com/coupons/target" aria-label="Target Coupons and Cash Back" class="slide__link"></a>
+        <div class="slide__image">
+            <img width="87" height="87" data-src="https://d229ghlvos009z.cloudfront.net/favicon/target-logos-030524.jpg" alt="target" class=" lazyloaded" src="https://d229ghlvos009z.cloudfront.net/favicon/target-logos-030524.jpg">
+        </div>
+        <div class="slide__text">
+            <h3>Target</h3>
+            <h4>27 Coupons</h4>
+            <h4>3% Online</h4>
+
+
+        </div>
+     </div><div class="slide" id="chargebikes">
+        <a href="https://price.com/coupons/chargebikes" aria-label="Charge Bikes Coupons and Cash Back" class="slide__link"></a>
+        <div class="slide__image">
+            <img width="87" height="87" data-src="https://d229ghlvos009z.cloudfront.net/favicon/Charge_bikes_idychxfdI6_0.jpeg" alt="chargebikes" class=" lazyloaded" src="https://d229ghlvos009z.cloudfront.net/favicon/Charge_bikes_idychxfdI6_0.jpeg">
+        </div>
+        <div class="slide__text">
+            <h3>Charge Bikes</h3>
+            <h4>2 Coupons</h4>
+            <h4>16% Online</h4>
+
+
+        </div>
+     </div><div class="slide" id="petco">
+        <a href="https://price.com/coupons/petco" aria-label="Petco Coupons and Cash Back" class="slide__link"></a>
+        <div class="slide__image">
+            <img width="87" height="87" data-src="https://d229ghlvos009z.cloudfront.net/favicon/petco-icon-030524.png" alt="petco" class=" lazyloaded" src="https://d229ghlvos009z.cloudfront.net/favicon/petco-icon-030524.png">
+        </div>
+        <div class="slide__text">
+            <h3>Petco</h3>
+            <h4>4 Coupons</h4>
+            <h4>1% Online</h4>
+
+
+        </div>
+     </div><div class="slide" id="uber">
+        <a href="https://price.com/coupons/uber" aria-label="Uber Coupons and Cash Back" class="slide__link"></a>
+        <div class="slide__image">
+            <img width="87" height="87" data-src="https://d229ghlvos009z.cloudfront.net/favicon/uber_app_icon-030524.png" alt="uber" class=" lazyloaded" src="https://d229ghlvos009z.cloudfront.net/favicon/uber_app_icon-030524.png">
+        </div>
+        <div class="slide__text">
+            <h3>Uber</h3>
+
+            <h4>$2 Online</h4>
+
+
+        </div>
+     </div></div>
 
 {% endblock %}
