--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,3 +35,13 @@ input {
   width: 100%;
 }
 
+.center {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  color: #000000;
+}
+
