--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                         <a class="dropdown-item" href="/services">Services</a>
                         <a class="dropdown-item" href="/toys-games">Toys & Games</a>
                     </div>
-                
+
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
@@ -58,9 +58,11 @@
     </nav>
     <div class="container mt-4">
         <div class="text-center mb-4">
-            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="ShopWiseMate Logo" class="center-logo">
+            <img src="{{ url_for('static', filename='images/logo1.png') }}" alt="ShopWiseMate Logo" class="center-logo">
         </div>
         {% block content %}{% endblock %}
+
+
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
