--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,290 @@
 
 
     </div>
+    <footer class="footer">
+  <div class="shell">
+    <section class="column flex">
+      <div class="flex vertical margin-0">
+        <div class="footer__inner">
+          <div class="footer__content">
+            <figure class="logo">
+              <a href="https://price.com/" aria-label="Footer Link Price.com"><img data-src="{{ url_for('static', filename='images/logo1.png')  }}" class=" ls-is-cached lazyloaded" alt="" src="{{ url_for('static', filename='images/logo1.png')  }}"></a>
+              <figcaption>
+                <span>© ShopWIseMate Technologies Inc.</span>
+                <span>10000 Santa Monica Blvd</span>
+                <span>Nairobi, KENYA, 90067</span>
+              </figcaption>
+            </figure>
+            <div class="app-store">
+              <a class="sign-up__app-store" href="https://apps.apple.com/us/app/price-com/id1084205000"><img data-src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/svg/download-apple.svg" class=" ls-is-cached lazyloaded" alt="Download on the App Store" width="177" height="53" src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/svg/download-apple.svg"></a>
+              <a class="sign-up__app-store sign-up__app-store--google" href="https://play.google.com/store/apps/details?id=com.LogicSquare.Price12"><img data-src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/svg/download-google.svg" class=" ls-is-cached lazyloaded" alt="Download on Google Play" width="177" height="53" src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/svg/download-google.svg"></a>
+            </div>
+          </div>
+          <!-- /.footer__content -->
+
+          <div class="footer__aside">
+            <div class="social">
+              <a href="https://www.tiktok.com/@pricedotcom?">
+                <figure>
+                  <img data-src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/tiktok-black.svg" alt="tiktok" width="17" height="20" class=" ls-is-cached lazyloaded" src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/tiktok-black.svg">
+                  <figcaption></figcaption>
+                </figure>
+              </a>
+
+              <a href="https://www.instagram.com/pricedotcom/">
+                <figure>
+                  <img data-src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/instagram-black.svg" alt="instagram" width="20" height="20" class=" ls-is-cached lazyloaded" src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/instagram-black.svg">
+                  <figcaption></figcaption>
+                </figure>
+              </a>
+
+              <a href="https://www.facebook.com/getpriceapp">
+                <figure>
+                  <img data-src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/facebook-black.svg" alt="facebook" width="11" height="20" class=" lazyloaded" src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/facebook-black.svg">
+                  <figcaption></figcaption>
+                </figure>
+              </a>
+
+              <a href="https://www.pinterest.com/getpriceapp/">
+                <figure>
+                  <img data-src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/pinterest-black.svg" alt="pinterest" width="15" height="20" class=" lazyloaded" src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/pinterest-black.svg">
+                  <figcaption></figcaption>
+                </figure>
+              </a>
+
+              <a href="https://twitter.com/getpriceapp">
+                <figure>
+                  <img data-src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/x-black.svg" alt="twitter" width="24" height="20" class=" lazyloaded" src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/x-black.svg">
+                  <figcaption></figcaption>
+                </figure>
+              </a>
+            </div>
+
+            <section class="sign-up column">
+
+
+              <h4>Never Miss Another Deal!</h4>
+
+              <form action="#" class="signup">
+                <input type="text" name="email" id="email" placeholder="name@gmail.com">
+
+                <button class="button" aria-label="Subscribe" type="submit"><img data-src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/green-subscribe.svg" class=" lazyloaded" alt="Subscribe" src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/green-subscribe.svg"></button>
+              </form>
+              <div class="email-message" id="thanks"></div>
+            </section>
+          </div>
+        </div>
+        <!-- /.footer__aside -->
+      </div>
+      <!-- /.footer__inner -->
+
+      <div class="footer__cols">
+        <div class="footer__nav">
+          <h6>
+            About
+            <img src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/svg/footer-menu-arrow.svg" alt="Expand About Menu">
+          </h6>
+
+          <div class="footer__links">
+            <ul>
+              <li>
+                <a href="/">Comparison Shopping</a>
+              </li>
+
+              <li>
+                <a href="/blog/category/announcements/">Announcements</a>
+              </li>
+
+              <li>
+                <a href="/cashback">Cash Back Offers</a>
+              </li>
+
+              <li>
+                <a href="/enterprise">Product Matching Platform</a>
+              </li>
+
+              <li>
+                <a href="/merchants">Become a Merchant</a>
+              </li>
+
+              <li>
+                <a href="/bestsellers">Best Deals</a>
+              </li>
+
+              <li>
+                <a href="/coupons">Coupon Codes</a>
+              </li>
+
+              <li>
+                <a href="/givefive">Refer and Earn</a>
+              </li>
+
+              <li>
+                <a href="/about">Our Story</a>
+              </li>
+
+              <li>
+                <a href="/cashback/transactions">Wallet Balance</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer__links -->
+        </div>
+        <!-- /.footer__nav -->
+
+        <div class="footer__nav">
+          <h6>
+            Stores
+            <img src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/svg/footer-menu-arrow.svg" alt="Expand Stores Menu">
+          </h6>
+
+          <div class="footer__links">
+            <ul>
+              <li>
+                <a href="/coupons/expedia">Expedia</a>
+              </li>
+
+              <li>
+                <a href="/coupons/nike">Nike</a>
+              </li>
+
+              <li>
+                <a href="/coupons/kohls">Kohl’s</a>
+              </li>
+
+              <li>
+                <a href="/coupons/macys">Macy’s</a>
+              </li>
+
+              <li>
+                <a href="/coupons/sephora">Sephora</a>
+              </li>
+
+              <li>
+                <a href="/coupons/target">Target</a>
+              </li>
+
+              <li>
+                <a href="/coupons/walmart">Walmart</a>
+              </li>
+
+              <li>
+                <a href="/coupons/aloyoga">Alo Yoga</a>
+              </li>
+
+              <li>
+                <a href="/cashback">See All Stores</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer__links -->
+
+          <h6>
+            Seasonal
+
+            <img src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/svg/footer-menu-arrow.svg" alt="Expand Seasonal Menu">
+          </h6>
+
+          <div class="footer__links">
+            <ul>
+              <li>
+                <a href="/blog/category/collections">Buying Guides</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer__links -->
+        </div>
+        <!-- /.footer__nav -->
+
+        <div class="footer__nav">
+          <h6>
+            Popular Categories
+
+            <img src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/svg/footer-menu-arrow.svg" alt="Expand Popular Categories Menu">
+          </h6>
+
+          <div class="footer__links">
+            <ul>
+              <li>
+                <a href="/cashback#everyday+apps">Everyday Apps</a>
+              </li>
+
+              <li>
+                <a href="/cashback#travel+&amp;+vacations">Travel &amp; Vacations</a>
+              </li>
+
+              <li>
+                <a href="/cashback#shoes">Shoes</a>
+              </li>
+
+              <li>
+                <a href="/cashback#makeup+&amp;+skincare">Makeup &amp; Skincare</a>
+              </li>
+
+              <li>
+                <a href="/cashback#clothing">Clothing</a>
+              </li>
+
+              <li>
+                <a href="/cashback#food+and+drink">Food and Drink</a>
+              </li>
+
+              <li>
+                <a href="/cashback">See All Stores</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer__links -->
+
+          <h6>
+            Tools &amp; Services
+
+            <img src="https://dz7smbqkw02oe.cloudfront.net/footer/assets/images/svg/footer-menu-arrow.svg" alt="Expand Tools Menu">
+          </h6>
+
+          <div class="footer__links">
+            <ul>
+              <li>
+                <a href="https://apps.apple.com/us/app/price-com/id1084205000">iOS App</a>
+              </li>
+              <li>
+                <a href="https://play.google.com/store/apps/details?id=com.LogicSquare.Price12">Android App</a>
+              </li>
+              <li>
+                <a href="/extension">Browser Add-on</a>
+              </li>
+
+              <li>
+                <a href="https://campaign.price.com/pharmacy-savings-card/">Pharmacy Savings Card</a>
+              </li>
+              <li>
+                <a href="https://help.price.com/">Help Center</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer__links -->
+        </div>
+        <!-- /.footer__nav -->
+      </div>
+      <!-- /.footer__cols -->
+    </section>
+    <section class="sub-nav">
+      <div class="sub-nav__links">
+        <a href="mailto:hello@price.com">Contact</a>
+
+        <a href="https://www.linkedin.com/company/pricedotcom/jobs/">Jobs</a>
+        <a href="/terms">Terms</a>
+        <a href="/press">Press</a>
+        <a href="/privacy">Privacy</a>
+
+        <a href="/sitemap.xml">Sitemap</a>
+      </div>
+      <div class="sub-nav__filler"></div>
+    </section>
+  </div>
+  <!-- /.shell -->
+</footer>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
