--- a/static/css/style.css
+++ b/static/css/style.css
@@ -723,4 +723,197 @@ body, button, div, form, header, input, section, table, td {
 
 
 
+/* ------------------footer-------------------*/
+/* General Styles */
+/* General Styles */
+body, button, div, form, header, input, section, table, td {
+    box-sizing: border-box;
+    font-family: Montserrat, Trebuchet MS, Helvetica, sans-serif;
+    font-weight: 400;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+img {
+    image-rendering: -webkit-optimize-contrast;
+    height: auto;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+figcaption, figure, header, nav, section, main {
+    display: block;
+}
+
+/* Footer Styles */
+.footer {
+    padding: 2rem 0;
+    background: #f9f9f9;
+    color: #333;
+}
+
+.shell {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 1rem;
+}
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.vertical {
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.margin-0 {
+    margin: 0 !important;
+}
+
+.logo img {
+    width: 120px;
+    margin-bottom: 1rem;
+}
+
+figcaption span {
+    display: block;
+    font-size: 1.2rem;
+    line-height: 1.5;
+    color: #555;
+}
+
+.app-store {
+    display: flex;
+    align-items: center;
+    margin-top: 1rem;
+}
+
+.app-store .sign-up__app-store {
+    width: 140px;
+    margin-right: 1rem; /* Add spacing between the images */
+}
+
+.social {
+    display: flex;
+    align-items: center;
+    margin: 1rem 0;
+}
+
+.social figure {
+    margin-right: 1rem;
+}
+
+.social img {
+    width: 20px;
+    height: auto;
+}
+
+.sign-up {
+    margin-top: 1rem;
+}
+
+.sign-up h4 {
+    margin: 0 0 0.5rem;
+    font-size: 1.4rem;
+    color: #444;
+}
+
+.sign-up form {
+    display: flex;
+    align-items: center;
+}
+
+.sign-up input {
+    padding: 0.4rem;
+    font-size: 1.2rem;
+    border: 1px solid #ccc;
+    border-radius: 0.3rem;
+    width: 200px;
+}
+
+.sign-up button {
+    background: none;
+    border: none;
+    margin-left: -2rem;
+    cursor: pointer;
+}
+
+.sign-up #thanks {
+    text-align: left;
+    font-size: 1.4rem;
+    color: #222;
+    display: none;
+    margin-top: 1rem;
+}
+
+.footer__cols {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+}
+
+.footer__nav {
+    flex: 1;
+    margin-right: 2rem;
+}
+
+.footer__nav h6 {
+    font-size: 1.4rem;
+    line-height: 1.6rem;
+    color: #333;
+    margin: 0 0 1rem;
+}
+
+.footer__links ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.footer__links li {
+    margin-bottom: 0.8rem;
+}
+
+.footer__links a {
+    font-size: 1.2rem;
+    color: #555;
+    transition: color 0.3s;
+}
+
+.footer__links a:hover {
+    color: #000;
+}
+
+.sub-nav {
+    padding-top: 1.5rem;
+    border-top: 1px solid #eaeaea;
+    margin-top: 2rem;
+}
+
+.sub-nav__links {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.sub-nav__links a {
+    margin-right: 2rem;
+    font-size: 1.2rem;
+    color: #555;
+    transition: color 0.3s;
+}
+
+.sub-nav__links a:hover {
+    color: #000;
+}
+
+.sub-nav__filler {
+    flex-grow: 1;
+}
 
