Working on the FrontEnd

--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,7 @@
 
 <div class="slider__slides">
   <div class="slide" id="marriott">
-    <a href="" aria-label="Jumia Coupons and Cash Back" class="slide__link"></a>
+    <a href="https://www.jumia.co.ke/" aria-label="Jumia Coupons and Cash Back" class="slide__link"></a>
     <div class="slide__image">
       <img
         width="87"
@@ -45,7 +45,7 @@
   </div>
   <div class="slide" id="booking">
     <a
-      href=""
+      href="https://www.kilimall.co.ke/"
       aria-label="Kilimall Coupons and Cash Back"
       class="slide__link"
     ></a>
@@ -67,7 +67,7 @@
   </div>
   <div class="slide" id="nike">
     <a
-      href="https://price.com/coupons/nike"
+      href="https://ShopWiseMate/coupons/nike"
       aria-label="Nike Coupons and Cash Back"
       class="slide__link"
     ></a>
@@ -89,7 +89,7 @@
   </div>
   <div class="slide" id="walmart">
     <a
-      href="https://price.com/coupons/walmart"
+      href="https://ShopWiseMate/coupons/walmart"
       aria-label="Walmart Coupons and Cash Back"
       class="slide__link"
     ></a>
@@ -111,7 +111,7 @@
   </div>
   <div class="slide" id="target">
     <a
-      href="https://price.com/coupons/target"
+      href="https://ShopWiseMate/coupons/target"
       aria-label="Target Coupons and Cash Back"
       class="slide__link"
     ></a>
@@ -133,7 +133,7 @@
   </div>
   <div class="slide" id="vineyardvines">
     <a
-      href="https://price.com/coupons/vineyardvines"
+      href="https://ShopWiseMate/coupons/vineyardvines"
       aria-label="Vineyard Vines Coupons and Cash Back"
       class="slide__link"
     ></a>
@@ -156,7 +156,7 @@
   </div>
   <div class="slide" id="chargebikes">
     <a
-      href="https://price.com/coupons/chargebikes"
+      href="https://ShopWiseMate/coupons/chargebikes"
       aria-label="Charge Bikes Coupons and Cash Back"
       class="slide__link"
     ></a>
@@ -178,7 +178,7 @@
   </div>
   <div class="slide" id="uber">
     <a
-      href="https://price.com/coupons/uber"
+      href="https://ShopWiseMate/coupons/uber"
       aria-label="Uber Coupons and Cash Back"
       class="slide__link"
     ></a>
@@ -225,8 +225,8 @@
             "
           />
           <img
-            src="https://dz7smbqkw02oe.cloudfront.net/homepage/images/image-2%402x.png"
-            alt="Why Price.com"
+            src="{{ url_for('static', filename='images/image-2@2x.png') }}"
+            alt="Why ShopWiseMate"
             width="623"
             height="358"
             class="ls-is-cached lazyloaded"
@@ -245,7 +245,7 @@
           </p>
 
           <a
-            href="https://price.com/download"
+            href="https://ShopWiseMate/download"
             class="button size-1 hidden-xs hidden-sm"
             >Yes, Please!</a
           >
@@ -282,7 +282,7 @@
           </p>
 
           <a
-            href="https://price.com/download"
+            href="https://ShopWiseMate/download"
             class="button size-1 hidden-xs hidden-sm"
             >Get It</a
           >
@@ -437,7 +437,7 @@
       <ul class="collections--ul">
         <!-- Your list items -->
         <li>
-          <a href="https://price.com/blog/category/sporting-goods/"
+          <a href="https://ShopWiseMate/blog/category/sporting-goods/"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
@@ -450,7 +450,7 @@
           >
         </li>
         <li>
-          <a href="https://price.com/blog/category/home-garden/"
+          <a href="https://ShopWiseMate/blog/category/home-garden/"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
@@ -463,7 +463,7 @@
           >
         </li>
         <li>
-          <a href="https://price.com/blog/category/food-drink/"
+          <a href="https://ShopWiseMate/blog/category/food-drink/"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
@@ -476,7 +476,7 @@
           >
         </li>
         <li>
-          <a href="https://price.com/blog/category/toys-games/"
+          <a href="https://ShopWiseMate/blog/category/toys-games/"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
@@ -489,7 +489,7 @@
           >
         </li>
         <li>
-          <a href="https://price.com/blog/category/electronics/"
+          <a href="https://ShopWiseMate/blog/category/electronics/"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
@@ -502,7 +502,7 @@
           >
         </li>
         <li>
-          <a href="https://price.com/blog/category/health-beauty/"
+          <a href="https://ShopWiseMate/blog/category/health-beauty/"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
@@ -515,7 +515,7 @@
           >
         </li>
         <li>
-          <a href="https://price.com/blog/category/animals-pets/"
+          <a href="https://ShopWiseMate/blog/category/animals-pets/"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
@@ -528,7 +528,7 @@
           >
         </li>
         <li>
-          <a href="https://price.com/blog/category/cameras-optics/"
+          <a href="https://ShopWiseMate/blog/category/cameras-optics/"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
@@ -541,7 +541,7 @@
           >
         </li>
         <li>
-          <a href="https://price.com/blog/category/luggage-bags/"
+          <a href="https://ShopWiseMate/blog/category/luggage-bags/"
             ><figure>
               <img
                 class="lazyloaded"
@@ -554,7 +554,7 @@
           >
         </li>
         <li>
-          <a href="https://price.com/blog/category/vehicles-parts/"
+          <a href="https://ShopWiseMate/blog/category/vehicles-parts/"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
@@ -567,7 +567,7 @@
           >
         </li>
         <li>
-          <a href="https://price.com/blog/category/furniture/"
+          <a href="https://ShopWiseMate/blog/category/furniture/"
             ><figure>
               <img
                 class="lazyloaded"
@@ -580,7 +580,7 @@
           >
         </li>
         <li>
-          <a href="https://price.com/blog/category/baby-toddler/"
+          <a href="https://ShopWiseMate/blog/category/baby-toddler/"
             ><figure>
               <img
                 class="lazyloaded"
@@ -593,7 +593,7 @@
           >
         </li>
         <li>
-          <a href="https://price.com/blog/category/holiday-shopping/"
+          <a href="https://ShopWiseMate/blog/category/holiday-shopping/"
             ><figure>
               <img
                 class="lazyloaded"
