Working on the FrontEnd

--- a/templates/home.html
+++ b/templates/home.html
@@ -437,7 +437,7 @@
       <ul class="collections--ul">
         <!-- Your list items -->
         <li>
-          <a href="https://ShopWiseMate/blog/category/sporting-goods/"
+          <a href="/sporting-goods"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
