--- a/templates/base2.html
+++ b/templates/base2.html
@@ -20,27 +20,28 @@
                             Categories
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="/phones-tablets">Phones & Tablets</a>
+                           <a class="dropdown-item" href="/phoneTablets">Phones & Tablets</a>
                             <a class="dropdown-item" href="/electronics">Electronics</a>
-                            <a class="dropdown-item" href="/home-office-appliances">Home & Office Appliances</a>
+                            <a class="dropdown-item" href="/appliances">Home & Office Appliances</a>
                             <a class="dropdown-item" href="/health-beauty">Health & Beauty</a>
                             <a class="dropdown-item" href="/home-office">Home Office</a>
                             <a class="dropdown-item" href="/fashion">Fashion</a>
                             <a class="dropdown-item" href="/computing">Computing</a>
                             <a class="dropdown-item" href="/supermarket">Supermarket</a>
-                            <a class="dropdown-item" href="/baby-products">Baby Products</a>
-                            <a class="dropdown-item" href="/sporting-goods">Sporting Goods</a>
+                            <a class="dropdown-item" href="/babyproducts">Baby Products</a>
+                            <a class="dropdown-item" href="/sportinggoods">Sporting Goods</a>
                             <a class="dropdown-item" href="/automobile">Automobile</a>
-                            <a class="dropdown-item" href="/video-games">Video Games</a>
-                            <a class="dropdown-item" href="/patio-lawn-garden">Patio, Lawn & Garden</a>
-                            <a class="dropdown-item" href="/books-movies-music">Books, Movies & Music</a>
+                            <a class="dropdown-item" href="/gaming">Video Games</a>
+                            <a class="dropdown-item" href="/gardenoutdoor">Patio, Lawn & Garden</a>
+                            <a class="dropdown-item" href="/books_movie_music">Books, Movies & Music</a>
                             <a class="dropdown-item" href="/livestock">Livestock</a>
-                            <a class="dropdown-item" href="/industrial-scientific">Industrial & Scientific</a>
+                            <a class="dropdown-item" href="/industrialscientific">Industrial & Scientific</a>
                             <a class="dropdown-item" href="/miscellaneous">Miscellaneous</a>
-                            <a class="dropdown-item" href="/musical-instruments">Musical Instruments</a>
-                            <a class="dropdown-item" href="/pet-supplies">Pet Supplies</a>
+                            <a class="dropdown-item" href="/musicalintruments">Musical Instruments</a>
+                            <a class="dropdown-item" href="/petsupplies">Pet Supplies</a>
                             <a class="dropdown-item" href="/services">Services</a>
-                            <a class="dropdown-item" href="/toys-games">Toys & Games</a>
+                            <a class="dropdown-item" href="/toys_games">Toys & Games</a>
+
                         </div>
                     </li>
                 </ul>
@@ -75,7 +76,7 @@
         <input type="hidden" id="mogl_email" value="">
         <input type="hidden" id="mogl_id" value="">
     </header>
-
+    {% block content %}{% endblock %}
     <!-- Search Overlay -->
 
     <footer class="footer">
