--- a/templates/category.html
+++ b/templates/category.html
@@ -1,22 +1,25 @@
 {% extends "base2.html" %}
 
-{% block title %}{{ category }}{% endblock %}
+{% block title %}
+    {{ category }}
+{% endblock %}
 
 {% block content %}
-<h1>{{ category }}</h1>
-<div class="row">
-    {% for product in products %}
-    <div class="col-md-4">
-        <div class="card mb-4 shadow-sm">
-            <img src="{{ product.image }}" class="card-img-top" alt="{{ product.name }}">
-            <div class="card-body">
-                <h5 class="card-title">{{ product.name }}</h5>
-                <p class="card-text">{{ product.price }}</p>
-                <p class="card-text">Rating: {{ product.rating }}</p>
-                <a href="{{ product.product_link }}" class="btn btn-primary">View Product</a>
-            </div>
+    <div class="container">
+        <div class="row">
+            {% for product in products %}
+                <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                    <div class="card h-100">
+                        <img src="{{ product.image }}" class="card-img-top" alt="{{ product.name }}">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ product.name }}</h5>
+                            <p class="card-text">{{ product.price }}</p>
+                            <p class="card-text">Rating: {{ product.rating }}</p>
+                            <a href="{{ product.product_link }}" class="btn btn-primary">View Product</a>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
         </div>
     </div>
-    {% endfor %}
-</div>
 {% endblock %}
