--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
   <form>
     <button>🔍</button>
     <label>
-      <input placeholder="Explore our products" />
+      <input type="text" name="searchProduct" id="searchProduct" placeholder="Explore our products" />
     </label>
   </form>
 
