--- a/templates/home.html
+++ b/templates/home.html
@@ -282,7 +282,7 @@
           </p>
 
           <a
-            href="https://ShopWiseMate/download"
+            href="https://ShopWiseMate"
             class="button size-1 hidden-xs hidden-sm"
             >Get It</a
           >
@@ -437,7 +437,7 @@
       <ul class="collections--ul">
         <!-- Your list items -->
         <li>
-          <a href="/sporting-goods"
+          <a href="/sportinggoods"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
@@ -450,7 +450,7 @@
           >
         </li>
         <li>
-          <a href="https://ShopWiseMate/blog/category/home-garden/"
+          <a href="/home_garden"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
@@ -463,7 +463,7 @@
           >
         </li>
         <li>
-          <a href="https://ShopWiseMate/blog/category/food-drink/"
+          <a href="/supermarket"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
@@ -476,7 +476,7 @@
           >
         </li>
         <li>
-          <a href="https://ShopWiseMate/blog/category/toys-games/"
+          <a href="/toys_games"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
@@ -489,7 +489,7 @@
           >
         </li>
         <li>
-          <a href="https://ShopWiseMate/blog/category/electronics/"
+          <a href="/electronics"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
@@ -502,7 +502,7 @@
           >
         </li>
         <li>
-          <a href="https://ShopWiseMate/blog/category/health-beauty/"
+          <a href="/health_beauty"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
@@ -515,7 +515,7 @@
           >
         </li>
         <li>
-          <a href="https://ShopWiseMate/blog/category/animals-pets/"
+          <a href="/livestock"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
@@ -528,7 +528,7 @@
           >
         </li>
         <li>
-          <a href="https://ShopWiseMate/blog/category/cameras-optics/"
+          <a href="/automobile"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
@@ -541,7 +541,7 @@
           >
         </li>
         <li>
-          <a href="https://ShopWiseMate/blog/category/luggage-bags/"
+          <a href="/miscellaneous"
             ><figure>
               <img
                 class="lazyloaded"
@@ -554,7 +554,7 @@
           >
         </li>
         <li>
-          <a href="https://ShopWiseMate/blog/category/vehicles-parts/"
+          <a href="/services"
             ><figure>
               <img
                 class="ls-is-cached lazyloaded"
@@ -567,7 +567,7 @@
           >
         </li>
         <li>
-          <a href="https://ShopWiseMate/blog/category/furniture/"
+          <a href="/gardenoutdoor"
             ><figure>
               <img
                 class="lazyloaded"
@@ -580,7 +580,7 @@
           >
         </li>
         <li>
-          <a href="https://ShopWiseMate/blog/category/baby-toddler/"
+          <a href="/babyproducts"
             ><figure>
               <img
                 class="lazyloaded"
@@ -593,7 +593,7 @@
           >
         </li>
         <li>
-          <a href="https://ShopWiseMate/blog/category/holiday-shopping/"
+          <a href="/gaming"
             ><figure>
               <img
                 class="lazyloaded"
