--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,8 @@
                         <a class="dropdown-item" href="/phoneTablets">Phones & Tablets</a>
                         <a class="dropdown-item" href="/electronics">Electronics</a>
                         <a class="dropdown-item" href="/appliances">Home & Office Appliances</a>
-                        <a class="dropdown-item" href="/health-beauty">Health & Beauty</a>
-                        <a class="dropdown-item" href="/home-office">Home Office</a>
+                        <a class="dropdown-item" href="/health_beauty">Health & Beauty</a>
+                        <a class="dropdown-item" href="/home_office">Home Office</a>
                         <a class="dropdown-item" href="/fashion">Fashion</a>
                         <a class="dropdown-item" href="/computing">Computing</a>
                         <a class="dropdown-item" href="/supermarket">Supermarket</a>
