--- a/templates/credentials.html
+++ b/templates/credentials.html
@@ -52,7 +52,7 @@
                 <span id="cart-count">{{ cart_count }}</span>
             </a>
         </div>
-        <button class="button button--search" aria-label="Search" type="button" id="search-button">
+        <button class="button button--search" aria-label="Search" type="button">
             <img width="20" height="30" src="https://dz7smbqkw02oe.cloudfront.net/images/header-icons/search-icon-blk.svg" alt="Search">
         </button>
         <div class="overlay" id="overlay">
@@ -71,29 +71,15 @@
                 </picture>
             </a>
         </div>
-
-        <ul class="navbar-nav ml-auto">
-                {% if session.get('name') %}
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Welcome, {{ session.get('name') }}</a>
-                </li>
-                {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="/login">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/signup">Signup</a>
-                </li>
-                {% endif %}
-            </ul>
-
+        <div class="button--profile show">
+            <button class="btn btn-outline-dark" aria-label="Register">Register</button>
+            <button class="btn btn-outline-dark" aria-label="Sign In">Sign-In</button>
+        </div>
         <input type="hidden" id="mogl_token" value="">
         <input type="hidden" id="mogl_email" value="">
         <input type="hidden" id="mogl_id" value="">
     </header>
     {% block content %}{% endblock %}
-    <!-- Search Overlay -->
-
     <footer class="footer">
         <div class="shell">
             <div class="footer__inner">
@@ -120,21 +106,12 @@
             </div>
         </div>
     </footer>
-
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            // Toggle the search overlay
-            $('#search-button').click(function() {
-                $('#overlay').fadeIn();
-            });
-            $('#close-btn').click(function() {
-                $('#overlay').fadeOut();
-            });
-        });
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
