--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,58 @@
-{% extends "base2.html" %}
-{% block content %}
-	REGESTER
-    <p>
-    <a href="login.html">
-        Already Have an Account Login?
-    </a>
+{% extends "credentials.html" %}
 
-    </p>
+{% block content %}
+<section class="vh-100" style="background-color: #9A616D;">
+    <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col col-xl-10">
+                <div class="card" style="border-radius: 1rem;">
+                    <div class="row g-0">
+                        <div class="col-md-6 col-lg-5 d-none d-md-block">
+                            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
+                                alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                        </div>
+                        <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                            <div class="card-body p-4 p-lg-5 text-black">
+                                <form method="POST" action="/register">
+                                    <div class="d-flex align-items-center mb-3 pb-1">
+                                        <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                                        <span class="h1 fw-bold mb-0">Logo</span>
+                                    </div>
+                                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Create your account</h5>
+                                    <div class="form-outline mb-4">
+                                        <input name="name" type="text" id="form3Example1" class="form-control form-control-lg" required />
+                                        <label class="form-label" for="form3Example1">Name</label>
+                                    </div>
+                                    <div class="form-outline mb-4">
+                                        <input name="email" type="email" id="form3Example2" class="form-control form-control-lg" required />
+                                        <label class="form-label" for="form3Example2">Email address</label>
+                                    </div>
+                                    <div class="form-outline mb-4">
+                                        <input name="password" type="password" id="form3Example3" class="form-control form-control-lg" required />
+                                        <label class="form-label" for="form3Example3">Password</label>
+                                    </div>
+                                    <div class="form-outline mb-4">
+                                        <input name="confirmpassword" type="password" id="form3Example4" class="form-control form-control-lg" required />
+                                        <label class="form-label" for="form3Example4">Confirm Password</label>
+                                    </div>
+                                    <div class="pt-1 mb-4">
+                                        <button class="btn btn-dark btn-lg btn-block" type="submit">Register</button>
+                                    </div>
+                                    {% for message in get_flashed_messages() %}
+                                        <div class="alert alert-info" role="alert">
+                                            {{ message }}
+                                        </div>
+                                    {% endfor %}
+                                    <p class="mb-5 pb-lg-2" style="color: #393f81;">Already have an account? <a href="/login" style="color: #393f81;">Sign in here</a></p>
+                                    <a href="#!" class="small text-muted">Terms of use.</a>
+                                    <a href="#!" class="small text-muted">Privacy policy</a>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
