--- a/templates/category.html
+++ b/templates/category.html
@@ -6,6 +6,19 @@
 
 {% block content %}
     <div class="container">
+        <!-- Flash messages -->
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                <div class="alert-container">
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ category }}">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                </div>
+            {% endif %}
+        {% endwith %}
+
         <div class="row">
             {% for product in products %}
                 <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
